--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,31 @@
 width: 400px;
 margin: 10px 500px;
 }
+.flex{
+   display: flex;
+   flex-direction: row;
+}
+.dynamic-delete-button {
+   position: relative;
+   top: 4px;
+   margin: 0 8px;
+   color: #999;
+   font-size: 24px;
+   cursor: pointer;
+   transition: all 0.3s;
+ }
+ .dynamic-delete-button:hover {
+   color: #777;
+ }
+ .dynamic-delete-button[disabled] {
+   cursor: not-allowed;
+   opacity: 0.5;
+ }
+
+ .grid-tem{
+  display: grid;
+  grid-template-columns: repeat(8, auto);
+ }
+ .input{
+  width: 170px;
+ }
